need a swagger generate for new routes
