# app/Http/Controllers/AuthController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
+use OpenApi\Annotations as OA;
 
 class AuthController extends \Illuminate\Routing\Controller
 {
@@ -13,6 +14,38 @@ class AuthController extends \Illuminate\Routing\Controller
         $this->middleware('auth:api', ['except' => ['login']]);
     }
 
+    /**
+     * @OA\Post (
+     *     path="/api/auth/login",
+     *     tags={"auth"},
+     *     summary="Login",
+     *     description="Login a user",
+     *     @OA\Parameter(
+     *           name="email",
+     *           in="query",
+     *           description="The email of the user",
+     *           required=true,
+     *           @OA\Schema(
+     *               type="string"
+     *           )
+     *       ),
+     *     @OA\Parameter(
+     *           name="password",
+     *           in="query",
+     *           description="The password of the user",
+     *           required=true,
+     *           @OA\Schema(
+     *               type="string"
+     *           )
+     *       ),
+     *       @OA\Response(
+     *           response=200,
+     *           description="successfully logged in"
+     *        ),
+     *       @OA\Response(response=400, description="Invalid credentials"),
+     *       @OA\Response(response=404, description="Login path Not Found"),
+     * )
+     */
     public function login(): \Illuminate\Http\JsonResponse
     {
         $credentials = request(['email', 'password']);
